--- a/ProjetoAnaBella/estilos/estilo1.css
+++ b/ProjetoAnaBella/estilos/estilo1.css
@@ -1,24 +1,37 @@
 body {
-		background: #d2d2c1 url("imagens/fundo.png");		
+		background:  #d2d2c1 url('imagens/fundo.png');
+		font: 16px Arial, Helvetica, sans-serif;	
 	}
-#principal{
-	border: 0px solid red;
-	width: 900px;
 
+a {
+	color: #4b566a;
+	text-decoration: none;
+	font-weight: bold;
+	padding: 5px;
+} 
+
+h1 {
+	color: #828271;
+	font-size: 1.2em;
+}
+
+
+#principal{
+	width: 900px;
 }
 
 #menu{
 	background-color: #c5c5b2;
-}
-.link {
-	color: black;
-	background-color: #CDC009;
+	padding: 18px;
 }
 
-.titulo {
-	color: #a15b15c1;
-	font-size: 20px;
-	font: bold;
+#conteudo {
+	background: #e8e8d9;
+	padding: 10px;
+}
+
+#rodape{
+	text-align: center;
 }
 
 .texto {
@@ -26,7 +39,10 @@ body {
 	font-family: "Times New Roman", Times, serif;
 }
 
-.rodape{
-	color: black;
-	font-variant-position: center center;
+.centralizar {
+	text-align: center;
+}
+
+.img-campanha {
+	border: 10px solid #c3c3ae;
 }
