--- a/ProjetoTecBlog/css/estilo.css
+++ b/ProjetoTecBlog/css/estilo.css
@@ -1,17 +1,3 @@
-* {
-	padding: 0;
-	margin: 0;
-}
- body{
- 	font-size: 1em;
- 	font-family: "Times New Roman", Times,	sans-serif;
- 	background: #e6e6e6;
- }
-
-h1 {
-	color: #4e4e4e;
-	font-size: 2em;
-}
 
 
 /*
@@ -31,9 +17,7 @@ h1 {
 	background-color: white;
 	width: 920px;
 	margin: 0 auto;/*Margens laterais automatias*/
-}
-#area-postagens, #area-lateral{
-	background: orange;
+	padding: 15px
 }
 
 #area-postagens{
@@ -54,6 +38,11 @@ h1 {
 
 }
 
+.conteudo-lateral {
+	background: white;
+	padding: 10px;
+	margin-bottom: 20px;
+}
 .postagem {
 	padding: 20px;
 	margin-bottom: 20px;
@@ -65,26 +54,83 @@ h1 {
 	color: #fff;
 }
 
+.data-postagem{
+	font-size: 0.8em;
+	border-bottom: 1px solid #f4f4f4;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	display: block;
+	
+}
+
+.postagem-lateral {
+	font-size: 0.8em;
+	padding: 5px;
+	border-bottom: 1px dotted #CCC;
+	
+}
+
+
+* {
+	padding: 0;
+	margin: 0;
+}
+ body{
+ 	font-size: 1em;
+ 	font-family: "Times New Roman", Times,	sans-serif;
+ 	background: #e6e6e6;
+ }
+
+h1 {
+	color: #4e4e4e;
+	font-size: 2em;
+}
+
+h2 {
+	color: #f7b600
+}
+h3 {
+	color: #565656;
+	background: #ccc;
+	padding: 5px;
+}
 /*
 ****Formatação dos menus
 */
 
-a {
+
+a/*seletores de tag*/ {
 	text-decoration: none;
 }
 
-a:link,a:visited {
+a:link, a:visited/*estados do limk*/ {
+	color:#f7b600;
+
+	
+}
+
+ a:hover {
+	text-decoration: underline;
+}
+
+
+
+#area-cabecalho/*Combinação de id com estado de link*/ a:link/*estados do limk*/, 
+#area-cabecalho/*Combinação de id com estado de link*/ a:visited/*estados do limk*/ {
 	color:#fff;
 	padding: 8px 12px;
 	
 }
 
-a:hover {
+#area-cabecalho a:hover {
 	color: #f7b600;
 	background: #fff;
+	text-decoration: none;
 
 }
 
 a:active{
 	color: black;
 }
+
+
