--- a/noticias-cidade/css/estilo.css
+++ b/noticias-cidade/css/estilo.css
@@ -87,25 +87,50 @@ body.fotos #navegacao a#fotos{
 	background: #f5f5f5;
 }
 
-#primario {
-	width: 270px;
-	float: left;
-	margin: 0 0 20px 195px;
-	background: blue;
-}
-
-#secundario {
-	width: 270px;
-	float: left;
-	margin: 0 0 20px 15px;
-	background: green;
-}
-
 #lateral {
 	width: 180px;
 	float: left;
 	margin: 0 0 20px -750px;
-	background: yellow;
+}
+
+#primario {
+	width: 270px;
+	float: left;
+	margin: 0 0 20px 195px;
+}
+
+#duas-colunas #primario {
+	width: 555px;
+}
+
+#uma-coluna #primario {
+	width: 750px;
+	margin: 0 0 20px 0;
+	
+}
+#secundario {
+	width: 270px;
+	float: left;
+	margin: 0 0 20px 15px;
+}
+ /*Caixa*/
+.caixa {
+	margin: 10px 0;
+	padding: 5px 0 5px 0;
+	background: #f3f3f3 url(../imagens/fundo-caixa.png)
+}
+
+h2 {
+	font-size: 1em;
+	background: #294c71;
+	color: #fff;
+	padding: 5px;
+}
+
+.caixa-conteudo {
+	background: #fff;
+	padding: 5px;
+	margin-top: 5px;
 }
 
 /*Rodapé*/
