--- a/noticias-cidade/css/estilo.css
+++ b/noticias-cidade/css/estilo.css
@@ -132,7 +132,66 @@ h2 {
 	padding: 5px;
 	margin-top: 5px;
 }
+/*Foramatar menus laterais*/
 
+#lateral ul a {
+	font-size: 0.9em;
+	padding: 3px;
+	display: block;
+	line-height: 30px;
+	color: #000;
+	text-decoration: none;
+	border-bottom: 1px solid #f3f3f3;
+}
+
+#lateral ul a:hover {
+	background: #f9f9f9 url(../imagens/marcador.png) no-repeat left center;
+	color: #a1a1a1;
+	padding-left: 20px;
+}
+
+label {
+	display: block;
+	cursor: pointer;
+}
+
+input {
+	padding: 5px;
+	width: 125px;
+	font-size: 0.9em;
+	background-color: #fff;
+}
+
+input.submit {
+	width: 80px;
+	color: #fff;
+	background-color: #b10333;
+	border:2px solid #870529;
+}
+/*Formatando imagem*/
+ img.imagem-principal {
+ 	width: 98%;
+ 	border: 3px solid #dfdfdf;
+ }
+
+ /*Formatando cabçalhos*/
+
+ h3 {
+ 	text-transform: uppercase;
+ 	display: inline;
+ 	font-size: 0.8em;
+ 	padding: 3px;
+ }
+
+ .destaque h3 {
+ 	background: #b10333;
+ 	color: #fff;
+ }
+
+ .entrevista h3 {
+ 	background: #de003e;
+ 	color: #fff;
+ }
 /*Rodapé*/
 #container-rodape {
 	background: #294c71;
