--- a/chale-hotel/css/estilo.css
+++ b/chale-hotel/css/estilo.css
@@ -13,11 +13,10 @@ body {
 }
 
 #container {
-	background: #ede9cc;
+	background: #ede9cc url(../imagens/bg-container.png)top center repeat-y;
 	margin: 0 auto; 
 	min-width: 740px;
 	max-width: 1180px;
-	
 }
 
 #topo {
@@ -119,4 +118,29 @@ ul#navegacao a:hover {
 	width: 226px;
 	height: 164px;
 	float: right;
+}
+
+/* area de conteúdos
+*******************/
+
+#area-principal {
+	float: left;
+	width: 50%;
+	background: url(../imagens/bg-area-principal.png) top left repeat-x;
+	padding: 15px 0px;
+}
+
+#area-lateral{
+	float: right;	
+	width: 50%;
+	background: url(../imagens/bg-area-lateral.png) top left repeat-x;
+	padding: 20px 0px;
+}
+
+.conteudo {
+	margin: 0 auto;
+	width: 90%;
+}
+#rodape {
+	clear: both;
 }
