--- a/ProjetoWeb/css3 recursos/css/estilo.css
+++ b/ProjetoWeb/css3 recursos/css/estilo.css
@@ -1,21 +1,34 @@
 #caixa {
 	width: 300px;
+	height:300px;
+	/*background: url(../degrade/camera.png);*/
+	/*background: linear-gradient(96deg, #ccc, green, yellow, red)*/
+	background: radial-gradient(red,green,yellow, blue)
+}
+
+#caixa h1{
+	/*background: rgba(255,255,255, 0.8);*/
+}
+
+/*#caixa {
+	width: 300px;
 	height: 300px;
 	background: #b9c941;
 	padding: 50px;
-	box-sizing: border-box;
+	box-sizing: border-box;/*box-sizing também usa os mesmos kits de versões anteriores de browser.*/ 
 	/*-webkit-border-radius: 20px 90px;  -webkit- usado para versões do chrome e safari 
-										que não aceitam border-radiu
+										que não aceitam border-radiu.
 	-moz-border-radius: 20px 90px;	-moz- usado para versões do firefox que não aceitam border-radiu
 	border-radius: 20px 90px; 	maioria dos browser aceitam desta forma.*/ 
 }
-
+/*
 #caixa2 {
 	width: 300px;
 	height: 300px;
 	background: #b9c941;
-	/*-webkit-border-radius: 20px 90px;  -webkit- usado para versões do chrome e safari 
+	-webkit-border-radius: 20px 90px;  -webkit- usado para versões do chrome e safari 
 										que não aceitam border-radiu
 	-moz-border-radius: 20px 90px;	-moz- usado para versões do firefox que não aceitam border-radiu
-	border-radius: 20px 90px; 	maioria dos browser aceitam desta forma.*/ 
+	border-radius: 20px 90px; 	maioria dos browser aceitam desta forma.
 }
+*/ 
