--- a/ProjetoWeb/css3 recursos/css/estilo.css
+++ b/ProjetoWeb/css3 recursos/css/estilo.css
@@ -10,7 +10,9 @@
 	/*background: rgba(255,255,255, 0.8);*/
 }
 
-/*#caixa {
+/*
+tipos de bordas das caixas
+#caixa {
 	width: 300px;
 	height: 300px;
 	background: #b9c941;
@@ -19,9 +21,9 @@
 	/*-webkit-border-radius: 20px 90px;  -webkit- usado para versões do chrome e safari 
 										que não aceitam border-radiu.
 	-moz-border-radius: 20px 90px;	-moz- usado para versões do firefox que não aceitam border-radiu
-	border-radius: 20px 90px; 	maioria dos browser aceitam desta forma.*/ 
+	border-radius: 20px 90px; 	maioria dos browser aceitam desta forma. 
 }
-/*
+
 #caixa2 {
 	width: 300px;
 	height: 300px;
@@ -31,4 +33,5 @@
 	-moz-border-radius: 20px 90px;	-moz- usado para versões do firefox que não aceitam border-radiu
 	border-radius: 20px 90px; 	maioria dos browser aceitam desta forma.
 }
+Fim bordas caixas
 */ 
