--- a/ProjetoWeb/css3 recursos/css/estilo.css
+++ b/ProjetoWeb/css3 recursos/css/estilo.css
@@ -1,14 +1,40 @@
+
+/*Sombra
 #caixa {
 	width: 300px;
 	height:300px;
-	/*background: url(../degrade/camera.png);*/
-	/*background: linear-gradient(96deg, #ccc, green, yellow, red)*/
+	padding: 8px;
+	margin: 20px;
+	background: #009670;
+	box-shadow: 20px 20px 50px 50px rgba(0,0,0,0.2);
+}
+
+#caixa h1 {
+	color:white;
+	/*text-shadow: 20px 20px red;
+	text-shadow: 20px/*x 20px/*y 4px/*blur rgba(0,0,0,0.6);
+}
+Fim Sombra
+*/
+
+
+
+/*
+degrades e gradientes
+#caixa {
+	width: 300px;
+	height:300px;
+	/*background: url(../degrade/camera.png);
+	/*background: linear-gradient(96deg, #ccc, green, yellow, red)
 	background: radial-gradient(red,green,yellow, blue)
 }
 
 #caixa h1{
-	/*background: rgba(255,255,255, 0.8);*/
+	/*background: rgba(255,255,255, 0.8);
 }
+Fim degrade e gradientes
+*/
+
 
 /*
 tipos de bordas das caixas
