--- a/ProjetoWeb/css3 recursos/css/estilo.css
+++ b/ProjetoWeb/css3 recursos/css/estilo.css
@@ -1,3 +1,41 @@
+/**********
+Animaçoes
+*********
+
+@keyframes animacao-caixa {
+	from {/*Estado inicial
+		background: red;
+		border-radius: 0px;
+		top: 0;
+		left: 0;
+	}/*Estado final
+	to{
+		background: yellow;
+		border-radius: 300px;
+		top: 300px;
+		left:	750px;
+	}
+}
+
+#caixa {
+	width: 300px;
+	height: 300px;
+	background: red;
+	position: relative;
+	/*
+	animation-name: animacao-caixa;
+	animation-duration: 5s;
+	animation-delay: 1s;
+	animation-iteration-count: 2;
+	animation-direction: all;
+	
+	animation: animacao-caixa 5s 1s 2 alternate;
+}
+
+Fim animaçoes
+*/
+
+
 
 /*Sombra
 #caixa {
