Tags específicas para inputs

--- a/ProjetoWeb/html5/css/estilo.css
+++ b/ProjetoWeb/html5/css/estilo.css
@@ -12,4 +12,16 @@ nav {
 
 footer {
 	background: #ccc
+
+}
+article {
+	background: orange;
+	padding: 10px;
+}
+
+section {
+	border: 1px dotted #fff
+}
+aside {
+	background: blue;
 }
